--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .calculator{
     max-width: 400px;
     margin: 10vh auto 0 auto;
+    border: 0.5px solid #999;
     box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
 }
 
