--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
 }
 
-.display{
+#input{
     text-align: right;
     height: 70px;
     line-height: 70px;
