--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,44 @@
-.calculator{
-    max-width: 400px;
-    margin: 10vh auto 0 auto;
-    border: 0.5px solid #999;
-    box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
-}
 
-#input{
-    text-align: right;
-    height: 70px;
-    line-height: 70px;
-    padding: 16px 8px;
-    font-size: 25px;
-}
-
-.buttons{
+/* Your CSS Code here. */
+/* CSS for calculator layout */
+.calculator {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-gap: 5px;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    width: 500px;
 }
 
-.button{
-    border: 0.5px solid #999;
-    text-align: center;
-    line-height: 70px;
-    font-size: 25px;
+/* CSS for calculator buttons */
+.calculator button {
+    grid-column: span 1;
+    grid-row: span 1;
+    background-color: #f2f2f2;
+    color: black;
+    font-size: 20px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
 }
 
-#ans{
-    color: white;
-    background-color: #5555ff;
+.calculator button:hover {
+    background-color: #e6e6e6;
 }
 
-.button:hover{
-    background-color: #ccc;
-    transition: 0.3s ease-in-out;
+/* CSS for calculator display */
+.calculator input[type=text] {
+    grid-column: 1 / span 4;
+    grid-row: 1 / span 1;
+    background-color: #f2f2f2;
+    color: black;
+    font-size: 40px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    text-align: right;
 }
