--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-/* Your CSS Code here. */
-/* CSS for calculator layout */
 .calculator {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -11,9 +8,9 @@
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     width: 500px;
+    margin: 0 auto;
 }
 
-/* CSS for calculator buttons */
 .calculator button {
     grid-column: span 1;
     grid-row: span 1;
@@ -30,7 +27,6 @@
     background-color: #e6e6e6;
 }
 
-/* CSS for calculator display */
 .calculator input[type=text] {
     grid-column: 1 / span 4;
     grid-row: 1 / span 1;
